@@ -2,7 +2,6 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree string="Test">
-    <field name="field"/>
-    <field name="operator"/>
-    <field name="operand"/>
+    <field name="rule_group"/>
+    <field name="domain" expand="1"/>
 </tree>
