@@ -1,3 +1,4 @@
+* (Field, Operator, Operand) are replaced by Domain on Rule
 * Add global search
 * Replace view shortcut by menu favorite
 * Store default language in database
